# iscore-addon-video

./: CMakeLists.txt  iscore_addon_video.cpp  iscore_addon_video.hpp  score_addon_video.cpp  score_addon_video.hpp
VideoProcess/: VideoFactory.hpp  VideoLayerModel.cpp  VideoLayerModel.hpp  VideoLayerSerialization.cpp  VideoModel.cpp  VideoModel.hpp  VideoPanelProxy.cpp  VideoPanelProxy.hpp  VideoPresenter.cpp  VideoPresenter.hpp  VideoProcessMetadata.hpp  VideoSerialization.cpp  VideoView.cpp  VideoView.hpp
VideoProcess/Commands/: SetVideo.cpp  SetVideo.hpp  VideoCommandFactory.cpp  VideoCommandFactory.hpp
VideoProcess/Inspector/: VideoInspectorFactory.cpp  VideoInspectorFactory.hpp  VideoInspectorWidget.cpp  VideoInspectorWidget.hpp
